--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 14 17:58:35 2004  Alexandre Prokoudine <techwriter@land.ru>
+
+	* ru.po: translation updates.
+
 2004-06-12  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
