--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 14 19:15:40 2004  Alexandre Prokoudine <techwriter@land.ru>      
+
+	* ru.po: translation updates.
+
 Mon Jun 14 17:58:35 2004  Alexandre Prokoudine <techwriter@land.ru>
 
 	* ru.po: translation updates.
