--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 14 19:17:59 2004  Tim Janik  <timj@gtk.org>
+
+	* ru.po: comment updates.
+
 Mon Jun 14 19:15:40 2004  Alexandre Prokoudine <techwriter@land.ru>      
 
 	* ru.po: translation updates.
