--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-14  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 Mon Jun 14 19:17:59 2004  Tim Janik  <timj@gtk.org>
 
 	* ru.po: comment updates.
